--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,38 @@
-{
-  "extends": "next/core-web-vitals"
-}
+    {
+      "plugins": ["prettier", "@typescript-eslint"],
+      "extends": [
+        "airbnb-typescript",
+        "react-app",
+        "prettier"
+      ],
+      "rules": {
+        "prettier/prettier": "error",
+        "react-hooks/rules-of-hooks": "error",
+        "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+        "comma-dangle": ["error", "always-multiline"],
+        "object-curly-spacing": ["error", "always"],
+        "space-in-parens": ["error", "never"],
+        "computed-property-spacing": ["error", "never"],
+        "comma-spacing": ["error", { "before": false, "after": true }],
+        "eol-last": ["error", "always"],
+        "import/no-anonymous-default-export": 0,
+        "object-shorthand": "error",
+        "padding-line-between-statements": [
+          "error",
+          { "blankLine": "always", "prev": "*", "next": "return" }
+        ],
+        "@typescript-eslint/no-redeclare": 0,
+        "@typescript-eslint/semi": ["off"],
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          {
+            "vars": "all",
+            "args": "none"
+          }
+        ],
+        "react/jsx-key": "error"
+      },
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      }
+    }
