--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.4",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.13.0",
