feat: 로그인/회원가입 기능 추가 (#9)
* chore: eslint 충돌 수정

* chore: eslint/no-shadow 설정

* feat: login/join validation 구현 및 api 연동

* feat: 로그인/회원가입 구현

* style: .env ignore

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,11 @@
 {
-  "plugins": ["prettier", "@typescript-eslint"],
-  "extends": ["airbnb-typescript", "react-app", "prettier"],
+  "plugins": ["prettier", "@typescript-eslint", "react-hook-form"],
+  "extends": [
+    "airbnb-typescript",
+    "react-app",
+    "prettier",
+    "plugin:react-hook-form/recommended"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
@@ -26,6 +31,8 @@
         "args": "none"
       }
     ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "off",
     "react/jsx-key": "error"
   },
   "parserOptions": {
