--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.1.3",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hook-form": "^0.2.5",
+    "immer": "^9.0.19",
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
