--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
   },
