--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.4.13",
