--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@types/node": "18.11.18",
@@ -28,9 +29,13 @@
     "react-icons": "^4.7.1",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
-    "react-syntax-highlighter": "^15.5.0",
+    "rehype-stringify": "^9.0.3",
+    "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
     "typescript": "4.9.4",
+    "unified": "^10.1.2",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
