--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "typescript": "4.9.4",
+    "use-sound": "^4.0.1",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
