--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@types/node": "18.11.18",
@@ -26,12 +27,22 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
+    "rehype-stringify": "^9.0.3",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "styled-components": "^5.3.8",
     "typescript": "4.9.4",
+    "unified": "^10.1.2",
     "use-sound": "^4.0.1",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "autoprefixer": "^10.4.13",
