--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "rehype-stringify": "^9.0.3",
