--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "incremental": true,
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/join/profile"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/join/profile"
+  ],
   "exclude": ["node_modules"]
 }
