--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,14 @@
     ],
     "react/jsx-key": "error",
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": "off"
+    "@typescript-eslint/no-shadow": "off",
+    //devDependencies 가 false면 devDependencies에서 라이브러리를 가져올 때 error가 표시된다
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ]
   },
   "parserOptions": {
     "project": "./tsconfig.json"
