--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-transform-css": "^6.0.1",
+    "msw": "^1.2.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-eslint": "^15.0.1",
