fix: 최적화/ 버그 수정/ 테스트 추가 (#20)
* chore: eslint 충돌 수정

* chore: eslint/no-shadow 설정

* feat: login/join validation 구현 및 api 연동

* feat: 로그인/회원가입 구현

* style: .env ignore

* feat: 라우터 연결

* feat: CORS문제 해결을 위한 rewrites추가

* feat: 회원가입 후 프로필 수정 기능 구현

* refactor: 디렉토리 구조 변경 및 기능 세분화

* feat: 프로필 정보 zustand store 에 업데이트

* feat: 전역state 업데이트 후 input defaultValue 업데이트 구현

* chore: tanstackQuery(react-query) 환경 설정

* feat: 메인 페이지에서 로그인 여부에 따라 버튼 렌더링

* refactor: react-hook-form input 컴포넌트화

* feat: userStore 삭제 및 ServerState의 완전한 이분화

* feat: mypage 수정 기능 구현

* refactor: merge 전 쓸데없는 import 삭제

* refactor: 프로필 이미지 바뀔 때도 슬라이더 뜨도록 설정

* feat: MyPageForm input hover시 수정 버튼 기능 구현

* feat: /my-page input 에러 해결

* feat: bio에서 markdown 렌더링 구현

* feat: 검색 기능 구현

* feat: 검색 후 유저 페이지 렌더링

* feat: 팔로잉 여부에 따른 화면 렌더링

* refactor: 전역 스토어 역할에 따른 분리 세분화

* refactor: 전역 스토어 변경에 따른 기능 재배분

* style: 마크다운에서 리스트 들여쓰기를 위한 global.css 수정

* style: 마크다운 렌더링 시 줄바꿈 적용위해 tailwind 수정

* chore: Dockerfile, .dockerignore 최적화

* fix: Todo 유효성 검사 적용(공백 문자 등록 불가)

* fix: Todo 유효성 검사 적용(등록 개수 제한, 수정 시 공백 문자 불가)

* fix: 페이지 로드 시 slider 애니메이션 오작동 수정

* fix: Todo 유효성 검사 적용(등록 개수 제한-전역State 길이 확인)

* style: type 변경 및 적용

* style: react-query 반환값 수정 및 적용

* style: form 핸들링 코드 최적화

* style: 파일명 대문자 변경

* fix: 페이지 로드 되자마자 formSlider가 나오는 현상 수정

* fix: bio가 아무것도 입력되지 않았을 때 업데이트 되지 않는 버그 수정

* style: 검색 api 응답값 변경에 따른 코드 수정

* style: form 핸들링 코드 최적화

* feat: 검색바 무한 스크롤 기능 적용

* refactor: form 에러 핸들링 방법 수정 및 구조 수정

* fix: 마크다운 렌더링 방식 styled-components -> tailwindcss/typography 으로 변경

* chore: Jest/ RTL/ ESLint Plugin(jest-dom, testing library) 설정 추가

* chore: msw 설정 추가

* refactor: 회원가입, 프로필 form 최적화

* chore: jest 설정 수정(modulePaths 추가 등)

* test: react-query 테스트를 위한 커스텀 훅 추가

* test: TodoInput -> localStorage 등록 테스트

* style: Todo validation 추가에 따른 컴포넌트 로직 수정

* refactor: 검색 바 무한 스크롤 로직 최적화

* refactor: react-quer

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,18 @@
 {
-  "plugins": ["prettier", "@typescript-eslint", "react-hook-form"],
+  "plugins": [
+    "prettier",
+    "@typescript-eslint",
+    "react-hook-form",
+    "jest-dom",
+    "testing-library"
+  ],
   "extends": [
     "airbnb-typescript",
     "react-app",
     "prettier",
-    "plugin:react-hook-form/recommended"
+    "plugin:react-hook-form/recommended",
+    "plugin:jest-dom/recommended",
+    "plugin:testing-library/react"
   ],
   "rules": {
     "prettier/prettier": "error",
@@ -33,9 +41,19 @@
     ],
     "react/jsx-key": "error",
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": "off"
+    "@typescript-eslint/no-shadow": "off",
+    //devDependencies 가 false면 devDependencies에서 라이브러리를 가져올 때 error가 표시된다
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ]
   },
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "env": {
+    "jest": true
   }
 }
