--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@next/font": "13.1.3",
@@ -27,20 +28,23 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "rehype-stringify": "^9.0.3",
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
-    "styled-components": "^5.3.8",
     "typescript": "4.9.4",
     "unified": "^10.1.2",
     "use-sound": "^4.0.1",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -51,14 +55,22 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "jest": "^29.5.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-transform-css": "^6.0.1",
+    "msw": "^1.2.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5"
   }
 }
